HU002-subiendo primer test case UI(falta mejorar )

--- a/.env
+++ b/.env
@@ -1,12 +1,2 @@
-.env
-*.env
-.env.*
-/venv/
-/.venv/
-.env
-/playwright-report/
-/test-results/
-/reports/
-/node_modules/
-/playwright-report/index.html
-/test-results/.last-run.json
+
+BASE_URL=https://trello.com
