--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "1.0.0",
   "description": "pruebaWebSelenium",
   "main": "playwright.config.js",
-  "directories": {
-    "test": "test"
-  },
+  "directories": { "test": "test" },
   "scripts": {
-    "test": "playwright test"
+    "test": "playwright test",
+    "test:headed": "playwright test --headed",
+    "report": "playwright show-report",
+    "codegen": "playwright codegen",
+    "postinstall": "playwright install"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "@playwright/test": "1.55.1"
   },
   "keywords": [],
   "author": "",
