--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
-    "csv-parse": "^6.1.0",
-    "dotenv": "^16.6.1"
+    "csv-parse": "^6.1.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.1",
-    "allure-playwright": "^3.4.1"
+    "allure-playwright": "^3.4.1",
+    "dotenv": "^17.2.3"
   },
   "keywords": [],
   "author": "",
