--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:headed": "playwright test --headed",
     "report": "playwright show-report",
     "codegen": "playwright codegen",
-    "postinstall": "playwright install"
+    "postinstall": "playwright install",
+    "allure:report": "allure generate allure-results --clean -o allure-report",
+    "allure:open": "allure open allure-report"
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
@@ -21,6 +23,7 @@
     "@playwright/test": "^1.55.1",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "allure-commandline": "^2.34.1",
     "allure-playwright": "^3.4.1"
   },
   "keywords": [],
