--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
+    "ajv": "^8.17.1",
     "csv-parse": "^6.1.0"
   },
   "devDependencies": {
